2004-01-28  Chris Abbey  <jikes@cabbey.net>

	* src/system.cpp (Control::ProcessExtDirs): Don't spew
	an error about invalid zip or jar for files that are
	obviously neither zip nor jar.

2004-01-28  Eric Blake  <ebb9@byu.net>

	* src/bytecode.h (IsMultiDimensionalArray): New method.
	* src/bytecode.cpp (DeclareLocalVariable),
	(EmitAssignmentExpression, EmitArrayAccessLhs): Use it; fully
	solves jikes bug 3295 (my last patch here missed some cases).
	(Bytecode): Robustify Chris's patch for class-file version.

2004-01-26  Eric Blake  <ebb9@byu.net>

	* src/init.cpp (ComputeFinalValue): Jikes bug 3797.
	* src/decl.cpp (ProcessClassBodyForEffectiveJavaChecks): Fix
	compiler warning.

2004-01-26  Chris Abbey	 <jikes@cabbey.net>

	* src/bytecode.cpp (ctor): use same class file versions for 1.4.2
	as for 1.4, add output file version to debug verbose output.
	
2004-01-25  Chris Abbey  <jikes@cabbey.net>

	* src/error.cpp (PrintNamedWarnings): indicate default states with +P
	(REDUNDANT_MODIFIER, RECOMMENDED_MODIFER_ORDER): remove from
	default +P set, must ask for these explicitly now.
	* src/error.h:
	* src/error.cpp: add a meta +P switch for all naming convention warnings
	* src/scanner.cpp: make the new l vs L warning pedantic 
	
2004-01-25  Elliott Hughes  <enh@acm.org>

	* src/error.cpp (SemanticError::Report): fix +Z option
	* src/body.cpp: Ignore the unconventional constant field name
	'serialVersionUID' which ought to be 'SERIAL_VERSION_UID',
	but has to be 'serialVersionUID' because of existing practice
	in class versioning.
	* src/control.h:
	* src/platform.cpp:
	* src/platform.h: Add 'serialVersionUID' symbol.
	* src/error.cpp: Improves the message for unconventional names.
	* src/decl.cpp: Ignore empty classes when suggesting private constructors
	for utility classes.
	* src/body.cpp: Warn about unconventional names, returning null instead
	of a zero-length array, empty catch and finally blocks, and overly
	general throws clauses.